--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Using OpenLayers with Vite</title>
+    <style>
+      @import "node_modules/ol/ol.css";
+    </style>
+    <style>
+      html, body, #map-container {
+        margin: 0;
+        height: 100%;
+        width: 100%;
+        font-family: sans-serif;
+        background-color: #04041b;
+      }
+      .locate {
+        top: 6em;
+        left: .5em;
+      }
+    </style>
   </head>
   <body>
-    <div id="map"></div>
+    <div id="map-container"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
